# medical-notes-workbench

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  config.example.toml  gemini-extension.json  package.json  pyproject.toml
.github/workflows/: ci.yml
agents/: med-catalog-curator.md  med-knowledge-architect.md
commands/mednotes/: create.toml  enrich.toml  process-chats.toml  setup.toml
docs/: agent-instructions.md  flashcards-roadmap.md
docs/reference/: cli.md  extension.md  json-contracts.md
docs/workflows/: enrich.md  fix-wiki.md  flashcards.md  link.md  process-chats.md
extension/: GEMINI.md
extension/agents/: med-chat-triager.md  med-flashcard-maker.md  (+2 more)
gemini-cli-extension/: GEMINI.md
knowledge/: README.md  knowledge-architect.md  semantic-linker.md
scripts/: bootstrap_windows_python_uv.ps1  build_gemini_cli_extension.py  enrich_notes.py  full_reset_windows_python_uv.cmd  publish_gemini_cli_extension_branch.py  reset_windows_python_uv.ps1  run_agent.py  run_python.mjs
tests/: test_anki_model_validator.py  test_cache.py  test_cli.py  test_config.py  test_download.py  test_enrich_notes.py  test_flashcard_index.py  test_flashcard_install_models.py  test_flashcard_pipeline.py  test_flashcard_report.py  test_flashcard_sources.py  test_frontmatter.py  test_insert.py  test_med_auto_linker.py  test_med_chat_processor.py  test_med_pipeline_streamline.py  test_obsidian_note_utils.py  test_run_agent.py  test_sources_web_search.py  test_sources_wikimedia.py  test_sync_anki_twenty_rules.py  test_wiki_graph.py  test_wiki_note_style.py
(+164 files in other folders)
